Update 1. How to publish a page as a site.md

--- a/1. How to publish a page as a site.md
+++ b/1. How to publish a page as a site.md
@@ -1,1 +1,30 @@
+Publishing a page in SharePoint is a straightforward process, but the exact steps can vary slightly depending on your SharePoint version and how your site is configured. Here's a general guide:
 
+**1. Navigate to the Page:**
+   * Go to the SharePoint site where your page is located.
+   * Navigate to the "Site Pages" library or directly to the page you want to publish. You can usually find "Site Pages" in the site contents or through a link on your site's home page.
+
+**2. Edit the Page (if necessary):**
+   * If you've just created a new page or if you need to make changes to an existing draft, you'll need to be in "Edit" mode.
+   * Click the "Edit" button (usually in the top right corner of the page).
+
+**3. Make Your Changes:**
+   * Add text, images, web parts, and other content as needed.
+
+**4. Save as Draft (Optional but Recommended):**
+   * As you work, it's a good practice to save your progress as a draft. This allows you to step away and come back later without losing your work.
+   * Look for a "Save as draft" or simply "Save" button.
+
+**5. Publish the Page:**
+   * Once you are happy with your changes and ready for the page to be visible to others, click the "Publish" button. This button is typically found in the top right corner of the page, often next to or near the "Edit" button.
+
+   * **What happens when you publish:**
+      * The page becomes visible to all users with appropriate permissions on your SharePoint site.
+      * A new version of the page is created in the page history (if versioning is enabled).
+      * The page is no longer in "draft" status.
+
+**6. After Publishing (SharePoint Online Modern Experience):**
+   * In the modern SharePoint Online experience, after you publish, you often get a confirmation that the page has been published. You might also have options to:
+      * **Promote:** Share the page with others, add it to site navigation, post as news, or save as a page template.
+
+   Here's an example of what the modern SharePoint page publishing interface might look like: 
